Create unit test for plugins and `commonRoutes`