@@ -5,6 +5,8 @@ val h2_version: String by project
 val exposed_version: String by project
 val jbcrypt_version: String by project
 val ktor_version: String by project
+val coroutines_version: String by project
+val mockk_version: String by project
 
 plugins {
     kotlin("jvm") version "2.0.0"
@@ -22,6 +24,12 @@ application {
     applicationDefaultJvmArgs = listOf("-Dio.ktor.development=$isDevelopment")
 }
 
+kotlin {
+    jvmToolchain {
+        languageVersion.set(JavaLanguageVersion.of(17)) // Change 17 to the desired Java version
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -35,7 +43,7 @@ dependencies {
     implementation("io.ktor:ktor-server-status-pages")
     implementation("org.postgresql:postgresql:$postgres_version")
     implementation("io.ktor:ktor-server-call-logging:$ktor_version")
-    implementation("com.h2database:h2:$h2_version")
+
     implementation("io.ktor:ktor-server-netty-jvm")
     implementation("ch.qos.logback:logback-classic:$logback_version")
     implementation("org.jetbrains.exposed:exposed-core:$exposed_version")
@@ -43,6 +51,14 @@ dependencies {
     implementation("org.jetbrains.exposed:exposed-jdbc:$exposed_version")
     implementation("org.jetbrains.exposed:exposed-kotlin-datetime:$exposed_version")
     implementation("org.mindrot:jbcrypt:$jbcrypt_version")
-    testImplementation("io.ktor:ktor-server-test-host-jvm")
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version")
+    testImplementation("io.mockk:mockk:$mockk_version")
+    testImplementation("org.jetbrains.kotlin:kotlin-test:$kotlin_version")
+    testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version")
+    testImplementation("io.ktor:ktor-server-test-host:$ktor_version")
+    testImplementation("com.h2database:h2:$h2_version")
 }
+
+//tasks.withType<Test> {
+//    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dnet.bytebuddy.experimental=true")
+//}
